# fiap-lambda

./: .gitignore  Makefile  README.md  main.tf  pyproject.toml  terraform.tf  variables.tf
.github/workflows/: python-ci.yml
api-gateway/: main.tf  variables.tf
cognito/: main.tf  outputs.tf
lambda/: main.tf  outputs.tf
lambda/src/: main.py
lambda/tests/: conftest.py  test_main.py
src/: main.py
terraform/: .terraform.lock.hcl  lambda.tf  s3.tf
tests/: conftest.py  test_main.py  test_main_integration.py
