[tool.poetry]
name = "fiap-lambda"
version = "0.1.0"
description = ""
authors = ["Gabriel Nogueira <gabrielmvnogueira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35.14"
flake8 = "^7.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
