[tool.poetry]
name = "fiap-lambda"
version = "0.1.0"
description = ""
authors = ["Gabriel Nogueira <gabrielmvnogueira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35.14"
testcontainers = "^4.8.1"
sqlalchemy = "^2.0.34"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
